--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -65,10 +65,15 @@ g#logo {
   background-color: #FFF;
   color: #000;
   width: 70%;
-  margin-bottom: 20vh;
+  margin: 0;
+  padding-bottom: 5px;
   border-radius: 10px;
   overflow-y: scroll;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+}
+
+#container.new {
+  height: 67vh;
 }
 
 #search {
@@ -118,7 +123,11 @@ table {
 }
 
 td, th {
-  padding-top: 15px;
+  vertical-align: middle;
+}
+
+th.t-head {
+  font-size: ;
 }
 
 th, .table-descriptor {
@@ -128,13 +137,36 @@ th, .table-descriptor {
 td.table-value {
   color: #7A797A;
   font-size: 16px;
-  font-family: Work Sans;
+  font-family: Work Sans, sans-serif;
   height: 19px;
   letter-spacing: 0.4px;
 }
 
 tr {
   height: 50px;
+}
+
+tr.financials {
+  height: 35px;
+}
+
+tr.financials td {
+  font-size: 12px;
+  width: 100px;
+}
+
+tr.financials td.sig {
+  font-size: 14px;
+}
+
+tr.financials td.row-last {
+  font-size: 14px;
+  border-top: solid 2px #000;
+  border-bottom: solid 4px #000;
+}
+
+tr.financials td.neg-red {
+  color: red;
 }
 
 tr:nth-child(even) {
@@ -326,6 +358,10 @@ img.sortdesc {
     max-width: 125px;
   }
     
+  img#main-logo {
+    margin-right: 12%;
+  }
+    
   .hoodcast-search-input {
     width: 200px;
     height: 2rem;
@@ -338,7 +374,7 @@ img.sortdesc {
   }
     
   .autocomplete-items {
-    width: 200px;
+    width: 220px;
     font-size: 0.75rem;
   }
     
@@ -360,6 +396,7 @@ img.sortdesc {
 @media only screen and (max-height: 500px) {
   #container {
     top: 72px;
+    margin-bottom: 25vh;
   }  
     
   svg#hoodcast-logo,
