--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -42,13 +42,14 @@
 </div>
 
 {% for x in range(table_titles|length) %}
-<div id="to-{{ table_titles[x].lower() }}" class="table-start">
-  <h2 id="active" class="subheader">{{ table_titles[x].upper() }}</h2>
+{% set jt = table_titles[x] %}
+<div id="to-{{ jt.lower() }}" class="table-start">
+  <h2 id="active" class="subheader">{{ jt.upper() }}</h2>
   click to view:
-  <select id="{{ table_titles[x].lower() }}-selector" class="selectors">
+  <select id="{{ jt.lower() }}-selector" class="selectors">
 
   {% for table in table_titles %}
-    {% if table == table_titles[x] %}
+    {% if table == jt %}
     <option value="{{ table.lower() }}" SELECTED>
       the {{ table }} table
     </option>
@@ -60,21 +61,24 @@
   {% endfor %}
       
   </select>
+  
+  {% set jint = df_dict[jt] %}
+  {% set kls = jint['keys_list'] %}
 
   <div class="table-container">
-    <table id="table-{{ table_titles[x].lower() }}" class="hoodcast-table">
+    <table id="table-{{ jt.lower() }}" class="hoodcast-table">
       <tbody>
         <tr class="table-header hoodcast-header">
 
-          {% for i in range(df_dict[table_titles[x]]['columns']|length) %}
-          <th id="headers-{{ x }}-{{ i }}">
-            {{ df_dict[table_titles[x]]['columns'][i].lower().title() }}
-            <img id="{{ table_titles[x].lower() }}-sortasc-{{ i }}" 
+          {% for i in range(jint['columns']|length) %}
+          <th id="headers-{{ x }}-{{ i }}" class="t-head">
+            {{ jint['columns'][i].lower().title().strip('| ') }}
+            <img id="{{ jt.lower() }}-sortasc-{{ i }}" 
                  class="sortasc" 
                  alt="Sort Ascending"
                  src="{{ url_for('static', 
                       filename='resources/images/up.svg') }}" />
-            <img id="{{ table_titles[x].lower() }}-sortdesc-{{ i }}" 
+            <img id="{{ jt.lower() }}-sortdesc-{{ i }}" 
                  class="sortdesc"
                  alt="Sort Descending" 
                  src="{{ url_for('static', 
@@ -84,26 +88,54 @@
 
         </tr>
           
-        {% for i in range((df_dict[table_titles[x]]['keys_list']|length)-1) %}
-        {% for k in range(df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]]|length) %}
-        <tr id="{{ table_titles[x].lower() }}-{{ i+1 }}-datarow-{{ k }}" class="{{ table_titles[x].lower() }}-{{ i+1 }}-datarows" key="{{ k }}">
-          {% for w in range(df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k]|length) %}
-          {% if k != 0 and w == 0 %}
-          {% if df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k][w] == df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k-1][w] %}
-          <td key="row{{ k }}-{{ w }}"></td>
-          {% else %}
-          <td key="row{{ k }}-{{ w }}">
-            {{ df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k][w] }}
-          </td>
-          {% endif %}
-          {% else %}
-          <td key="row{{ k }}-{{ w }}">
-            {{ df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k][w] }}
-          </td>
-          {% endif %}
-          {% endfor %}
-        </tr>
-        {% endfor %}  
+          
+        {% for i in range((kls|length)-1) %}
+          {% for k in range(jint[kls[i+1]]|length) %}
+            <tr id="{{ jt.lower() }}-{{ i+1 }}-datarow-{{ k }}" 
+                class="{{ jt.lower() }}-{{ i+1 }}-datarows financials" 
+                key="{{ k }}">
+            {% for w in range(jint[kls[i+1]][k]|length) %}
+            {% set jval = jint[kls[i+1]][k][w] %}
+              {% if k != 0 and (w == 0 or w == 1) %}
+                {% if jval == jint[kls[i+1]][k-1][w] %}
+                  <td key="row{{ k }}-{{ w }}"></td>
+                {% else %}
+                  <td key="row{{ k }}-{{ w }}">
+                    {{ jval.strip(' |') }}
+                  </td>
+                {% endif %}
+              {% elif (k == 0 or k == (jint[kls[i+1]]|length) - 1) and w >= 2 %}
+                {% if k == 0 and (jval|string)[0] == '-' %}
+                  <td class="number row-first neg-red sig" key="row{{ k }}-{{ w }}">
+                    $({{ (jval|string).split('.')[0][1:] }})
+                  </td> 
+                {% elif k == 0 %}
+                  <td class="number row-first sig" key="row{{ k }}-{{ w }}">
+                    ${{ (jval|string).split('.')[0] }}
+                  </td>
+                {% elif k == (jint[kls[i+1]]|length) - 1 and (jval|string)[0] == '-' %}
+                  <td class="number row-last neg-red sig" key="row{{ k }}-{{ w }}">
+                    $({{ (jval|string).split('.')[0][1:] }})
+                  </td> 
+                {% else %}
+                  <td class="number row-last sig" key="row{{ k }}-{{ w }}">
+                    ${{ (jval|string).split('.')[0] }}
+                  </td>
+                {% endif %}
+              {% else %}
+                {% if (jval|string)[0] == '-' %}
+                  <td class="neg-red number" key="row{{ k }}-{{ w }}">
+                    ({{ (jval|string).split('.')[0][1:] }})
+                  </td>
+                {% else %}
+                  <td class="number" key="row{{ k }}-{{ w }}">
+                    {{ (jval|string).split('.')[0] }}
+                  </td>  
+                {% endif %}
+              {% endif %}
+            {% endfor %}
+            </tr>
+          {% endfor %}  
         {% endfor %}
 
       </tbody>
