--- a/templates/base.html
+++ b/templates/base.html
@@ -111,7 +111,7 @@
       body.style.background = 'white';
         
       if ($(window).width() > 500) {
-        container.style.height = '75vh';
+        container.style.height = '740px';
       }
     </script>
     {% endif %}
