--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -100,7 +100,14 @@ g#logo {
 }
 
 #container.new {
-  height: 67vh;
+  height: 500px;
+  max-height: 67%;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border: 3px solid #fff;
+  behavior: url(css/PIE.htc);
 }
 
 
@@ -367,7 +374,8 @@ img.sortdesc {
 
 @media only screen and (max-width: 850px) {
   #container {
-    width: 92vw;
+    max-width: 92vw;
+    width: 780px;
   }
     
   div#hoodcast-icon {
@@ -401,10 +409,6 @@ img.sortdesc {
 }
 
 @media only screen and (max-width: 500px) {
-  #container {
-    width: 92vw;
-  }
-    
   div#hoodcast-icon {
     height: 72px;
   }
