--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,8 @@
       if ($(window).width() > 500) {
         container.style.height = '740px';
         container.style.maxHeight = '80%';
+      } else {
+        var scrollRow = document.querySelector('.t-head');
       }
     </script>
     {% endif %}
