--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -92,6 +92,7 @@ g#logo {
   color: #000;
   width: 70%;
   margin: 0;
+  top: 0;
   border-radius: 10px;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -105,14 +106,14 @@ g#logo {
 
 #container.new {
   height: 100%;
-  max-height: 77%;
+  max-height: 80%;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
   -khtml-border-radius: 10px;
   border: 3px solid #fff;
   behavior: url(css/PIE.htc);
-  overscroll-behavior: none;
+  overscroll-behavior: contain;
 }
 
 
@@ -204,8 +205,14 @@ h2.subheader {
   padding: 5px 0;
 }
 
-h2#active.subheader {
-  margin-top: 60px;
+h2.subheader.statement {
+  margin-top: 65px;
+  cursor: pointer;
+}
+
+h2.subheader.statement:hover {
+  color: #FFF;
+  background-color: gray;
 }
 
 table {
@@ -229,7 +236,7 @@ td.table-value {
 
 /* Fin Statements */
 div.table-start {
-  overscroll-behavior: none;
+  overscroll-behavior: contain;
 }
 
 div.table-start select {
@@ -240,7 +247,7 @@ div.table-start select {
 
 div.table-container {
   margin-top: 1rem;
-  overscroll-behavior: none;
+  overscroll-behavior: contain;
 }
 
 table.hoodcast-table {
@@ -255,7 +262,16 @@ tbody#statement-body {
 
 tbody#statement-body th.t-head,
 tbody#statement-body div.tracks {
-  overflow-x: scroll;
+  top: 0;
+  bottom: 0;
+  overflow: scroll;
+  transform: translate3d(0,0,0);
+  -webkit-overflow-scrolling: touch;
+}
+
+tbody#statement-body th.t-head > *,
+tbody#statement-body div.tracks > * {
+  -webkit-transform: translateZ(0);
 }
 
 tr.table-header,
@@ -265,7 +281,7 @@ tr.financials {
 }
 
 tr.table-header {
-
+  
 }
 
 tr.table-header.hoodcast-header th.t-head {
@@ -327,7 +343,6 @@ tr.financials td.t-account {
   font-size: 14px;
   position: -webkit-sticky;
   position: sticky;
-  /*border-right: solid 4px gold;*/
   padding: 3px;
   left: 0;
   z-index: 21;
